[metadata]
name = artellapipe-libs-usd
description = USD libraries for ArtellaPipe
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: artellapipe.libs.usd.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/ArtellaPipe/artellapipe-libs-usd

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    tpDcc-libs-python
    tpDcc-core
    tpDcc-libs-qt

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1